Small refactoring